--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb://localhost:27017/smartmenu
+MONGO_URI=mongodb+srv://bandarabhanuka911:Z57kknl4jznhFMyl@cluster0.wl4lasq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
