--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# Node modules
 node_modules/
+
+# Environment variables
+.env
+
+# Logs
+logs/
+*.log
+
+# OS files
+.DS_Store
+
+# Optional: Lock file
 package-lock.json
